Add warning to intention in onboarding

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -231,6 +231,7 @@ profile-onboarding.profile-picture=I look like this
 profile-onboarding.description=Something about myself
 profile-onboarding.description.placeholder=I really love ice cream!
 profile-onboarding.interests=I really like these things...
+profile-onboarding.intention.warning=Can only be changed again after 24 hours
 
 register.title=Register
 register.subtitle=Create a new account
