--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -217,6 +217,7 @@ profile-onboarding.profile-picture=Tengo este aspecto
 profile-onboarding.description=Algo sobre mí
 profile-onboarding.description.placeholder=¡Me encanta el helado!
 profile-onboarding.interests=Me gustan mucho estas cosas...
+profile-onboarding.intention.warning=Sólo se puede volver a cambiar después de 24 horas
 
 register.title=Registrarse
 register.subtitle=Crear una nueva cuenta
