--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -217,6 +217,7 @@ profile-onboarding.profile-picture=Ho questo aspetto
 profile-onboarding.description=Qualcosa su di me
 profile-onboarding.description.placeholder=Mi piace molto il gelato!
 profile-onboarding.interests=Mi piacciono molto queste cose...
+profile-onboarding.intention.warning=Può essere cambiato di nuovo solo dopo 24 ore
 
 register.title=Registrati
 register.subtitle=Creare un nuovo account
