--- a/src/main/resources/i18n/messages_ja.properties
+++ b/src/main/resources/i18n/messages_ja.properties
@@ -217,6 +217,7 @@ profile-onboarding.profile-picture=私はこのような顔をしています。
 profile-onboarding.description=自分自身についての説明
 profile-onboarding.description.placeholder=私は本当にアイスクリームが大好きです
 profile-onboarding.interests=私は本当にこれらのものが好きです...
+profile-onboarding.intention.warning=24時間後のみ再変更可能
 
 register.title=登録
 register.subtitle=新規アカウントの作成
