--- a/src/main/resources/i18n/messages_ko.properties
+++ b/src/main/resources/i18n/messages_ko.properties
@@ -217,6 +217,7 @@ profile-onboarding.profile-picture=이렇게 생겼어요
 profile-onboarding.description=나 자신에 대한 것
 profile-onboarding.description.placeholder=저는 아이스크림을 정말 좋아합니다!
 profile-onboarding.interests=나는 이것들을 정말 좋아합니다...
+profile-onboarding.intention.warning=24시간 후에만 다시 변경할 수 있습니다
 
 register.title=등록하다
 register.subtitle=새로운 계정을 생성 
