--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -218,6 +218,7 @@ profile-onboarding.profile-picture=Я выгляжу вот так
 profile-onboarding.description=Кое-что о себе
 profile-onboarding.description.placeholder=Я очень люблю мороженое!
 profile-onboarding.interests=Мне очень нравятся эти вещи...
+profile-onboarding.intention.warning=Повторное изменение может быть произведено только через 24 часа
 
 register.title=Зарегистрироваться
 register.subtitle=Создать новую учетную запись
