--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -217,6 +217,7 @@ profile-onboarding.profile-picture=我看起来是这样的
 profile-onboarding.description=关于我自己的一些情况
 profile-onboarding.description.placeholder=我真的很喜欢吃冰淇淋!
 profile-onboarding.interests=我真的很喜欢这些东西...
+profile-onboarding.intention.warning=只有在24小时后才能再次改变
 
 register.title=注册
 register.subtitle=创建新账户
