--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -219,6 +219,7 @@ profile-onboarding.profile-picture=So sehe ich aus
 profile-onboarding.description=Etwas über mich
 profile-onboarding.description.placeholder=Ich liebe Eiscreme!
 profile-onboarding.interests=Ich mag diese Dinge wirklich gerne...
+profile-onboarding.intention.warning=Kann erst nach 24 Stunden wieder geändert werden
 
 register.title=Registrieren
 register.subtitle=Neues Konto erstellen
