--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -217,6 +217,7 @@ profile-onboarding.profile-picture=Je ressemble à ça
 profile-onboarding.description=Quelque chose à mon sujet
 profile-onboarding.description.placeholder=J'aime vraiment la crème glacée !
 profile-onboarding.interests=J'aime vraiment ces choses...
+profile-onboarding.intention.warning=Ne peut être modifié qu'après 24 heures
 
 register.title=S'inscrire
 register.subtitle=Créer un nouveau compte
