--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -217,6 +217,7 @@ profile-onboarding.profile-picture=Fico assim
 profile-onboarding.description=Algo sobre mim
 profile-onboarding.description.placeholder=Eu realmente adoro gelados!
 profile-onboarding.interests=Eu gosto mesmo destas coisas...
+profile-onboarding.intention.warning=Só pode ser alterado novamente após 24 horas
 
 register.title=Registar
 register.subtitle=Criar nova conta
