Alert when registering with OAuth provider without valid email address. Clean up code.

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -312,6 +312,7 @@ backend.error.captcha.invalid=Invalid captcha
 backend.error.register.min-age=Minimum age not reached
 backend.error.register.email-exists=Email address is already registered
 backend.error.register.email-spam=Email domain is blacklisted for spam
+backend.error.register.oauth.email-invalid=Your OAuth provider does not have a linked email address. Please add a valid email address to your OAuth provider and try again.
 
 # Web push #
 
