--- a/src/main/resources/i18n/messages_cz.properties
+++ b/src/main/resources/i18n/messages_cz.properties
@@ -306,6 +306,7 @@ backend.error.captcha.invalid=Neplatná captcha
 backend.error.register.min-age=Nebyl dosažen minimální věk
 backend.error.register.email-existuje=Emailová adresa je již zaregistrována
 backend.error.register.email-spam=Emailová doména je na seznamu spamů
+backend.error.register.oauth.email-invalid=Váš zprostředkovatel OAuth nemá propojenou e-mailovou adresu. Přidejte prosím platnou e-mailovou adresu ke svému poskytovateli OAuth a zkuste to znovu.
 
 # Web push #
 
