--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -298,6 +298,7 @@ backend.error.captcha.invalid=Ungültiges Captcha
 backend.error.register.min-age=Mindestalter nicht erreicht
 backend.error.register.email-exists=E-Mail-Adresse ist bereits registriert
 backend.error.register.email-spam=E-Mail-Domain ist wegen Spam auf schwarze Liste
+backend.error.register.oauth.email-invalid=Dein OAuth-Anbieter besitzt keine verknüpfte E-Mail-Adresse. Bitte füge eine gültige E-Mail-Adresse zu Deinem OAuth-Anbieter hinzu und versuche es erneut.
 
 # Web push #
 
