--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -296,6 +296,7 @@ backend.error.captcha.invalid=Captcha inválido
 backend.error.register.min-age=Edad mínima no alcanzada
 backend.error.register.email-exists=La dirección de correo electrónico ya está registrada
 backend.error.register.email-spam=El dominio de correo electrónico está en la lista negra de spam
+backend.error.register.oauth.email-invalid=Su proveedor de OAuth no tiene una dirección de correo electrónico vinculada. Por favor, añade una dirección de correo electrónico válida a tu proveedor de OAuth e inténtalo de nuevo.
 
 # Web push #
 
