--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -296,6 +296,7 @@ backend.error.captcha.invalid=Captcha invalide
 backend.error.register.min-age=Âge minimum non atteint
 backend.error.register.email-exists=L'adresse électronique est déjà enregistrée
 backend.error.register.email-spam=Le domaine du courrier électronique est sur liste noire pour le spam
+backend.error.register.oauth.email-invalid=Ton fournisseur OAuth ne possède pas d'adresse e-mail associée. Veuillez ajouter une adresse e-mail valide à votre fournisseur OAuth et réessayer.
 
 # Web push #
 
