--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -296,6 +296,7 @@ backend.error.captcha.invalid=Captcha non valido
 backend.error.register.min-age=Età minima non raggiunta
 backend.error.register.email-exists=L'indirizzo e-mail è già registrato
 backend.error.register.email-spam=Il dominio e-mail è nella lista nera per lo spam
+backend.error.register.oauth.email-invalid=Il tuo provider OAuth non ha un indirizzo email collegato. Aggiungi un indirizzo email valido al tuo provider OAuth e riprova.
 
 # Web push #
 
