--- a/src/main/resources/i18n/messages_ja.properties
+++ b/src/main/resources/i18n/messages_ja.properties
@@ -296,6 +296,7 @@ backend.error.captcha.invalid=無効なキャプチャ
 backend.error.register.min-age=最低年齢に達していない
 backend.error.register.email-exists=メールアドレスは登録済み
 backend.error.register.email-spam=メールドメインはスパムのためにブラックリストに登録されています
+backend.error.register.oauth.email-invalid=OAuthプロバイダがリンク先のメールアドレスを持っていない。OAuthプロバイダに有効なメールアドレスを追加して、再度お試しください。
 
 # Web push #
 
