--- a/src/main/resources/i18n/messages_ko.properties
+++ b/src/main/resources/i18n/messages_ko.properties
@@ -296,6 +296,7 @@ backend.error.captcha.invalid=잘못된 보안 문자
 backend.error.register.min-age=최소 연령에 도달하지 않았습니다.
 backend.error.register.email-exists=이미 등록 된 이메일 주소
 backend.error.register.email-spam=스팸으로 차단 된 이메일 도메인
+backend.error.register.oauth.email-invalid=OAuth 제공업체에 연결된 이메일 주소가 없습니다. OAuth 제공업체에 유효한 이메일 주소를 추가하고 다시 시도하세요.
 
 # Web push #
 
