--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -296,6 +296,7 @@ backend.error.captcha.invalid=Captcha inválido
 backend.error.register.min-age=Idade mínima não atingida
 backend.error.register.email-exists=O endereço de e-mail já está registado
 backend.error.register.email-spam=O domínio e-mail está na lista negra para spam
+backend.error.register.oauth.email-invalid=O seu fornecedor OAuth não tem um endereço de correio electrónico ligado. Por favor adicione um endereço de correio electrónico válido ao seu fornecedor OAuth e tente novamente.
 
 # Web push #
 
