--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -297,6 +297,7 @@ backend.error.captcha.invalid=Недействительная капча
 backend.error.register.min-age=Минимальный возраст не достигнут
 backend.error.register.email-exists=Электронный адрес уже зарегистрирован
 backend.error.register.email-spam=Почтовый домен занесен в черный список для спама
+backend.error.register.oauth.email-invalid=Ваш поставщик OAuth не имеет связанного адреса электронной почты. Пожалуйста, добавьте действительный адрес электронной почты в провайдер OAuth и повторите попытку.
 
 # Web push #
 
