--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -296,6 +296,7 @@ backend.error.captcha.invalid=无效的验证码
 backend.error.register.min-age=未达到最低年龄
 backend.error.register.email-exists=电子邮件地址已经注册
 backend.error.register.email-spam=電郵域名被列入垃圾郵件黑名單
+backend.error.register.oauth.email-invalid=你的OAuth提供商没有一个链接的电子邮件地址。请在你的OAuth提供者中添加一个有效的电子邮件地址，然后再试一次。
 
 # Web push #
 
