Improve onboarding and translations

--- a/src/main/resources/i18n/messages_cz.properties
+++ b/src/main/resources/i18n/messages_cz.properties
@@ -228,6 +228,9 @@ profile-onboarding.description=Něco o sobě
 profile-onboarding.description.placeholder=Mám opravdu rád zmrzlinu!
 profile-onboarding.interests=Mám opravdu rád tyto věci...
 profile-onboarding.intention.warning=Lze znovu změnit až po 24 hodinách
+profile-onboarding.match.title=Získejte Líbí se mi teď!
+profile-onboarding.match.subtitle=Zprávy lze odesílat pouze po propojení
+profile-onboarding.submit=Pojďme!
 
 register.title=Registrovat
 register.subtitle=Vytvořit nový účet
