--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -220,6 +220,9 @@ profile-onboarding.description=Etwas über mich
 profile-onboarding.description.placeholder=Ich liebe Eiscreme!
 profile-onboarding.interests=Ich mag diese Dinge wirklich gerne...
 profile-onboarding.intention.warning=Kann erst nach 24 Stunden wieder geändert werden
+profile-onboarding.match.title=Jetzt Likes erhalten!
+profile-onboarding.match.subtitle=Nachrichten können nur nach einem Match gesendet werden
+profile-onboarding.submit=Los geht's!
 
 register.title=Registrieren
 register.subtitle=Neues Konto erstellen
