--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -218,6 +218,9 @@ profile-onboarding.description=Algo sobre mí
 profile-onboarding.description.placeholder=¡Me encanta el helado!
 profile-onboarding.interests=Me gustan mucho estas cosas...
 profile-onboarding.intention.warning=Sólo se puede volver a cambiar después de 24 horas
+profile-onboarding.match.title=¡Consigue Likes ahora!
+profile-onboarding.match.subtitle=Los mensajes sólo pueden enviarse después de un match
+profile-onboarding.submit=¡Vamos!
 
 register.title=Registrarse
 register.subtitle=Crear una nueva cuenta
@@ -263,7 +266,7 @@ faq.open-source.question=¿Qué significa código abierto? ¿Por qué este proye
 faq.open-source.answer=El código abierto significa básicamente que cualquiera puede ver cómo se creó cualquier parte del software, añadir cambios a cualquiera y ayudar con la depuración. Creemos que el código abierto es el futuro de todas las tecnologías.
 faq.safari.question=¡Estoy usando el navegador Safari y algo no funciona!
 faq.safari.answer=Debido a la naturaleza limitada del navegador Safari, no está oficialmente soportado. Si trabajas con MacOS, te recomendamos que uses Firefox. Safari no soporta notificaciones web push en ninguna plataforma, por favor solicita esta función <a href="https://developer.apple.com/bug-reporting/">aquí</a>.
-faq.match.question=No tengo cerillas, ¿algún consejo?
+faq.match.question=No tengo matches, ¿algún consejo?
 faq.match.answer=Usa imágenes claras y sin editar para añadirlas a tu perfil. Comparte lo que te gusta y lo que buscas en tu descripción.
 faq.no-users.question=¡No hay usuarios en mi área!
 faq.no-users.answer=Puedes intentarlo de nuevo en unos días, nuevos usuarios vendrán a la plataforma regularmente. Además, puedes donar o contarle a tu familia y amigos para hacer esta plataforma aún más popular.
