--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -10,7 +10,7 @@ success.clipboard=Copié dans le presse-papiers!
 error.max-chars.generic=Nombre maximum de caractères atteint.
 error.password-weak=Le mot de passe doit comporter au moins 7 caractères et contenir des caractères et des chiffres.
 error.password-no-match=Les mots de passe ne correspondent pas.
-error.media.max-size-exceeded=Le fichier est trop volumineux ! La taille maximale est de 2MB.
+error.media.max-size-exceeded=Le fichier est trop volumineux! La taille maximale est de 2MB.
 error.format-not-supported=Le format n'est pas pris en charge.
 success.generic=Succès!
 
@@ -87,7 +87,7 @@ yes=Oui
 
 # TEMPLATE #
 
-meta.content=Rencontrez de nouvelles personnes dans votre région, en toute confidentialité grâce aux technologies open source. Vous n'êtes qu'à quelques clics de trouver de nouveaux amis, de nouvelles rencontres et de nouveaux partenaires sexuels. Vous cherchez une petite amie ou un petit ami stable, un coup rapide, un coup d'un soir, ou simplement quelqu'un qui partage les mêmes intérêts ? Pas de problème !
+meta.content=Rencontrez de nouvelles personnes dans votre région, en toute confidentialité grâce aux technologies open source. Vous n'êtes qu'à quelques clics de trouver de nouveaux amis, de nouvelles rencontres et de nouveaux partenaires sexuels. Vous cherchez une petite amie ou un petit ami stable, un coup rapide, un coup d'un soir, ou simplement quelqu'un qui partage les mêmes intérêts ? Pas de problème!
 
 blocked-users.title=Utilisateurs bloqués
 profile.blocked-users=Afficher les utilisateurs bloqués
@@ -103,7 +103,7 @@ profile.warning.no-profile-picture=Aucune photo de profil trouvée!
 profile.warning.no-description=Aucune description trouvée!
 profile.warning.no-intention=Aucune intention trouvée!
 profile.warning.no-gender-preference=Aucune préférence de genre trouvée!
-profile.warning.no-location=Aucun emplacement trouvé ! Cette option sera automatiquement activée lors de la recherche d'autres utilisateurs!
+profile.warning.no-location=Aucun emplacement trouvé! Cette option sera automatiquement activée lors de la recherche d'autres utilisateurs!
 profile.warning.intention.limit=L'intention a changé. Vous ne pouvez pas le changer dans les prochaines 24 heures.
 
 delete-account.title=Supprimer le compte
@@ -134,7 +134,7 @@ index.private.description=Nous ne vendons pas vos informations à des tiers, nou
 index.ad-free.title=Publicité gratuite
 index.ad-free.description=Les publicités ralentissent le navigateur, sont intrusives, ennuyeuses et peuvent potentiellement apporter des logiciels malveillants sur votre appareil. C'est pourquoi vous ne verrez aucune publicité sur cette plateforme, car nous pensons qu'une bonne expérience de navigation est plus importante que notre profit économique.
 index.technology.title=Dernières technologies
-index.technology.description=Nous utilisons les dernières technologies afin que vous puissiez bénéficier des dernières technologies du web. Par exemple, vous pouvez installer ce site comme une <a href="https://wikipedia.org/wiki/Progressive_web_application">application web progressive</a> directement à partir de votre navigateur !
+index.technology.description=Nous utilisons les dernières technologies afin que vous puissiez bénéficier des dernières technologies du web. Par exemple, vous pouvez installer ce site comme une <a href="https://wikipedia.org/wiki/Progressive_web_application">application web progressive</a> directement à partir de votre navigateur!
 index.for-you.title=Construit pour vous
 index.for-you.description=Grâce à des filtres modernes, nous ne vous montrons que les personnes qui correspondent à vos critères. Ainsi, vous passez moins de temps à chercher et plus de temps à rencontrer de nouvelles personnes.
 index.sign-up-now=S'inscrire
@@ -155,7 +155,7 @@ login.register=Vous n'avez pas de compte?
 login.remember=Restez connecté
 login.js.error=La connexion a échoué, veuillez vérifier les données de connexion, remplir le captcha et réessayer. Un nouveau courriel de confirmation a été envoyé si votre compte n'a pas encore été vérifié.
 message.title=Nouvelles
-message.match=Un match! Quelqu'un vous aime en retour ! Tapez ici pour envoyer un message :)
+message.match=Un match! Quelqu'un vous aime en retour! Tapez ici pour envoyer un message :)
 message.video-chat=Un chat vidéo a été demandé!
 message.js.error.max-length=Nombre maximum de caractères atteint.
 message.js.video.confirm=Inviter un partenaire de chat à un chat vidéo?
@@ -185,14 +185,14 @@ profile.userdata.request=Demande de données utilisateur
 profile.account.delete=Supprimer le compte
 profile.interest.info=Seuls les caractères, les chiffres et le moins (-) sont autorisés. Doit comporter entre 3 et 30 caractères. Maximum 5 intérêts.
 profile.audio=Audio personnalisé
-profile.audio.info=Téléchargez une courte bande audio pour vos visiteurs. Vous pouvez télécharger n'importe quoi - des effets sonores, votre voix ou une partie de votre chanson préférée ! 
+profile.audio.info=Téléchargez une courte bande audio pour vos visiteurs. Vous pouvez télécharger n'importe quoi - des effets sonores, votre voix ou une partie de votre chanson préférée! 
 profile.audio.delete=Effacer l'audio?
-profile.delete-account.success=Succès ! Veuillez vérifier votre boîte aux lettres et lire attentivement les instructions.
+profile.delete-account.success=Succès! Veuillez vérifier votre boîte aux lettres et lire attentivement les instructions.
 profile.show-zodiac=Montrer les signes du zodiaque
 profile.ui-design=Conception de l'interface utilisateur
 profile.ui-design.rounded=Arrondi
 profile.ui-design.angular=Angulaire
-profile.referrer.info=Recommandez Alovoa à un ami ! Vous recevrez tous deux un petit coup de pouce de visibilité permanent si un nouveau compte est créé avec ce lien:
+profile.referrer.info=Recommandez Alovoa à un ami! Vous recevrez tous deux un petit coup de pouce de visibilité permanent si un nouveau compte est créé avec ce lien:
 profile.referrer.amount=Nombre de renvois restants:
 
 profile.misc-info.title=Plus d'infos
@@ -215,9 +215,12 @@ profile.js.delete-image.confirm=Supprimer l'image sélectionnée?
 
 profile-onboarding.profile-picture=Je ressemble à ça
 profile-onboarding.description=Quelque chose à mon sujet
-profile-onboarding.description.placeholder=J'aime vraiment la crème glacée !
+profile-onboarding.description.placeholder=J'aime vraiment la crème glacée!
 profile-onboarding.interests=J'aime vraiment ces choses...
 profile-onboarding.intention.warning=Ne peut être modifié qu'après 24 heures
+profile-onboarding.match.title=Obtenir des likes maintenant!
+profile-onboarding.match.subtitle=Les messages ne peuvent être envoyés qu'après un match
+profile-onboarding.submit=C'est parti!
 
 register.title=S'inscrire
 register.subtitle=Créer un nouveau compte
@@ -243,7 +246,7 @@ search.sort.filter.total-donation=Total des dons
 search.sort.filter.new-users=Nouveaux utilisateurs
 search.donation.popup=Vous voulez faire un don? Chaque centime nous aide à atteindre de nouveaux utilisateurs et à ajouter de nouvelles fonctionnalités pour améliorer votre expérience!
 search.warning.global=Aucun utilisateur compatible dans votre environnement. Les utilisateurs du monde entier sont désormais affichés.
-search.warning.incompatible=Aucun utilisateur compatible trouvé. Les utilisateurs incompatibles sont maintenant aussi affichés, alors faites attention !
+search.warning.incompatible=Aucun utilisateur compatible trouvé. Les utilisateurs incompatibles sont maintenant aussi affichés, alors faites attention!
 search.js.error.no-geolocation=Votre navigateur ne prend pas en charge la géolocalisation HTML5. Veuillez essayer un autre navigateur.
 search.js.error.no-location=La position n'a pas pu être déterminée. Assurez-vous que votre GPS est allumé.
 
@@ -263,7 +266,7 @@ faq.open-source.question=Que signifie "open source"? Pourquoi ce projet est-il o
 faq.open-source.answer=Le terme "open source" signifie essentiellement que tout le monde peut voir comment une partie du logiciel a été créée, ajouter des modifications à qui que ce soit et aider au débogage. Nous pensons que l'open source est l'avenir de toutes les technologies.
 faq.safari.question=J'utilise le navigateur Safari et quelque chose ne fonctionne pas!
 faq.safari.answer=En raison de la nature limitée du navigateur Safari, il n'est pas officiellement pris en charge. Si vous travaillez sous MacOS, nous vous recommandons d'utiliser Firefox. Safari ne prend pas en charge les notifications "web push" sur aucune plate-forme, veuillez demander cette fonctionnalité <a href="https://developer.apple.com/bug-reporting/">ici</a>.
-faq.match.question=Je ne reçois pas d'allumettes, ni de tuyaux?
+faq.match.question=Je ne reçois pas de matches, ni de tuyaux?
 faq.match.answer=Utilisez des images claires et non retouchées pour enrichir votre profil. Partagez ce que vous aimez et ce que vous recherchez dans votre description.
 faq.no-users.question=Il n'y a pas d'utilisateurs dans ma région!
 faq.no-users.answer=Vous pourrez réessayer dans quelques jours, de nouveaux utilisateurs viendront régulièrement sur la plateforme. De plus, vous pouvez faire un don ou en parler à votre famille et à vos amis pour rendre cette plateforme encore plus populaire!
@@ -324,4 +327,4 @@ backend.mail.account-delete-confirm.subject=Suppression de compte
 backend.mail.account-delete-confirm.body=Bonjour {0}, <br> Nous avons supprimé votre compte à {1}. Vous pouvez toujours créer un nouveau compte si vous changez d'avis. Nous espérons avoir de vos nouvelles :)
 
 backend.mail.account-confirmed.subject=Compte confirmé
-backend.mail.account-confirmed.body=Bonjour {0}, <br>Nous avons confirmé la création de votre compte auprès de {1}. Amusez-vous à rencontrer de nouvelles personnes !
+backend.mail.account-confirmed.body=Bonjour {0}, <br>Nous avons confirmé la création de votre compte auprès de {1}. Amusez-vous à rencontrer de nouvelles personnes!
