--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -155,7 +155,7 @@ login.register=Non hai un account?
 login.remember=Rimani collegato
 login.js.error=Login fallito, controllare i dati di accesso, compilare il captcha e riprovare. Una nuova email di conferma è stata inviata se il tuo account non è ancora stato verificato.
 message.title=Notizie
-message.match=È stata richiesta una video chat dal tuo partner di chat!
+message.match=Una match! A qualcuno piaci di nuovo! Tocca qui per inviare un messaggio :)
 message.video-chat=È stata richiesta una video chat!
 message.js.error.max-length=Numero massimo di caratteri raggiunto.
 message.js.video.confirm=Invitare un partner di chat in video chat?
@@ -218,6 +218,9 @@ profile-onboarding.description=Qualcosa su di me
 profile-onboarding.description.placeholder=Mi piace molto il gelato!
 profile-onboarding.interests=Mi piacciono molto queste cose...
 profile-onboarding.intention.warning=Può essere cambiato di nuovo solo dopo 24 ore
+profile-onboarding.match.title=Ottieni Mi piace ora!
+profile-onboarding.match.subtitle=I messaggi possono essere inviati solo dopo un match
+profile-onboarding.submit=Andiamo!
 
 register.title=Registrati
 register.subtitle=Creare un nuovo account
@@ -263,7 +266,7 @@ faq.open-source.question=Cosa significa open source? Perché questo progetto è 
 faq.open-source.answer=Open source significa fondamentalmente che chiunque può vedere come è stata creata qualsiasi parte del software, aggiungere modifiche a chiunque e aiutare nel debug. Crediamo che l'open source sia il futuro di tutte le tecnologie.
 faq.safari.question=Sto usando il browser Safari e qualcosa non funziona!
 faq.safari.answer=A causa della natura limitata del browser Safari, non è ufficialmente supportato. Se si lavora sotto MacOS, si consiglia di utilizzare Firefox. Safari non supporta le notifiche web push su nessuna piattaforma, si prega di richiedere questa funzione <a href="https://developer.apple.com/bug-reporting/">qui</a>.
-faq.match.question=Non ricevo fiammiferi, qualche consiglio?
+faq.match.question=Non ricevo match, qualche consiglio?
 faq.match.answer=Utilizzate immagini chiare e non modificate da aggiungere al vostro profilo. Condividete ciò che vi piace e ciò che cercate nella vostra descrizione.
 faq.no-users.question=Non ci sono utenti nella mia zona!
 faq.no-users.answer=Potete riprovare tra qualche giorno, i nuovi utenti arriveranno regolarmente sulla piattaforma. Inoltre potete donare o dire alla vostra famiglia e ai vostri amici di questa piattaforma per renderla ancora più popolare!
@@ -303,7 +306,7 @@ backend.error.register.oauth.email-invalid=Il tuo provider OAuth non ha un indir
 backend.webpush.like.subject=Qualcuno stia zitto!
 backend.webpush.like.message=Clicca qui per saperne di più
 
-backend.webpush.match.subject=Nuova partita!
+backend.webpush.match.subject=Nuova match!
 backend.webpush.match.message=Clicca qui per saperne di più
 
 backend.webpush.message.subject=Nuovo messaggio!
