--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -155,7 +155,7 @@ login.register=Não tem uma conta?
 login.remember=Permanecer logado
 login.js.error=O login falhou, por favor verifique os dados de login, preencha o captcha e tente novamente. Foi enviado um novo e-mail de confirmação se a sua conta ainda não tiver sido verificada.
 message.title=Notícias
-message.match=Um match! Alguém gosta de ti de volta! Escreva aqui para enviar uma mensagem :)
+message.match=Uma correspondência! Alguém gosta de ti de volta! Escreva aqui para enviar uma mensagem :)
 message.video-chat=Foi solicitado um video chat!
 message.js.error.max-length=Número máximo de caracteres atingido.
 message.js.video.confirm=Convidar um parceiro de chat para um chat vídeo?
@@ -218,6 +218,9 @@ profile-onboarding.description=Algo sobre mim
 profile-onboarding.description.placeholder=Eu realmente adoro gelados!
 profile-onboarding.interests=Eu gosto mesmo destas coisas...
 profile-onboarding.intention.warning=Só pode ser alterado novamente após 24 horas
+profile-onboarding.match.title=Gostar Agora!
+profile-onboarding.match.subtitle=As mensagens só podem ser enviadas após uma correspondência
+profile-onboarding.submit=Vamos!
 
 register.title=Registar
 register.subtitle=Criar nova conta
@@ -263,7 +266,7 @@ faq.open-source.question=O que significa código aberto? Porque é que este proj
 faq.open-source.answer=Código aberto significa basicamente que qualquer pessoa pode ver como qualquer parte do software foi criada, adicionar alterações a qualquer pessoa, e ajudar na depuração. Acreditamos que a fonte aberta é o futuro de todas as tecnologias.
 faq.safari.question=Estou a usar o navegador Safari e algo não está a funcionar!
 faq.safari.answer=Devido à natureza limitada do navegador Safari, este não é oficialmente suportado. Se estiver a trabalhar sob MacOS, recomendamos a utilização de Firefox. O Safari não suporta notificações Web push em qualquer plataforma, por favor solicite esta funcionalidade <a href="https://developer.apple.com/bug-reporting/">here</a>.
-faq.match.question=Não tenho fósforos, alguma dica?
+faq.match.question=Não tenho correspondências, alguma dica?
 faq.match.answer=Utilize imagens claras e não editadas para adicionar ao seu perfil. Partilhe o que gosta e o que procura na sua descrição.
 faq.no-users.question=Não há utilizadores na minha área!
 faq.no-users.answer=Pode tentar novamente dentro de alguns dias, novos utilizadores virão à plataforma regularmente. Além disso, pode doar ou contar à sua família e amigos para tornar esta plataforma ainda mais popular!
@@ -303,7 +306,7 @@ backend.error.register.oauth.email-invalid=O seu fornecedor OAuth não tem um en
 backend.webpush.like.subject=Alguém que se cale!
 backend.webpush.like.message=Clique aqui para saber mais
 
-backend.webpush.match.subject=Novo match!
+backend.webpush.match.subject=Nova correspondência!
 backend.webpush.match.message=Clique aqui para saber mais
 
 backend.webpush.message.subject=Nova mensagem!
