--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -219,6 +219,9 @@ profile-onboarding.description=Кое-что о себе
 profile-onboarding.description.placeholder=Я очень люблю мороженое!
 profile-onboarding.interests=Мне очень нравятся эти вещи...
 profile-onboarding.intention.warning=Повторное изменение может быть произведено только через 24 часа
+profile-onboarding.match.title=Получите лайки сейчас!
+profile-onboarding.match.subtitle=Сообщения могут быть отправлены только после совпадение
+profile-onboarding.submit=Поехали!
 
 register.title=Зарегистрироваться
 register.subtitle=Создать новую учетную запись
