--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -232,6 +232,9 @@ profile-onboarding.description=Something about myself
 profile-onboarding.description.placeholder=I really love ice cream!
 profile-onboarding.interests=I really like these things...
 profile-onboarding.intention.warning=Can only be changed again after 24 hours
+profile-onboarding.match.title=Start getting likes!
+profile-onboarding.match.subtitle=Messages can only be sent after a match
+profile-onboarding.submit=Let's go!
 
 register.title=Register
 register.subtitle=Create a new account
