Ad-free in French
Free is either “you don't have to pay for it” (gratuit in FR) or “none” (pas de in FR). Free ad != Ad-free

--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -104,7 +104,7 @@ index.open-source.title=Open-source
 index.open-source.description=Nous croyons à la transparence, et non à la dissimulation. Chaque ligne de code et chaque bibliothèque utilisée est libre et open source, de sorte que chacun peut consulter et améliorer la plate-forme s'il le souhaite.
 index.private.title=Privé et sécurisé
 index.private.description=Nous ne vendons pas vos informations à des tiers, nous tiendrons toujours cette promesse. En outre, les données sensibles sont cryptées et protégées même en cas de violation de la sécurité des données.
-index.ad-free.title=Publicité gratuite
+index.ad-free.title=Sans publicité
 index.ad-free.description=Les publicités ralentissent le navigateur, sont intrusives, ennuyeuses et peuvent potentiellement apporter des logiciels malveillants sur votre appareil. C'est pourquoi vous ne verrez aucune publicité sur cette plateforme, car nous pensons qu'une bonne expérience de navigation est plus importante que notre profit économique.
 index.technology.title=Dernières technologies
 index.technology.description=Nous utilisons les dernières technologies afin que vous puissiez bénéficier des dernières technologies du web. Par exemple, vous pouvez installer ce site comme une <a href="https://fr.wikipedia.org/wiki/Progressive_web_app">application web progressive</a> directement à partir de votre navigateur !
