Add arabic language support

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -6,6 +6,8 @@
 
 #do not translate
 app.name=Alovoa
+#only only for right-to-left languages
+app.direction=ltr
 
 error.generic=An error occured. Please try again.
 success.submit.generic=Your request has been successfully submitted.
