--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -290,15 +290,6 @@ backend.tos=<h3>Dienstleistungsbedingungen</h3><p>Aktualisiert am TOS_UPDATE_DAT
 
 # COMMON #
 
-#do not translate
-app.name=Alovoa
-meme=Meme
-
-#do not translate
-bmac=Kauf mir einen Kaffee
-#do not translate
-index.subtitle=Treffen Sie neue, spannende Leute!
-mi=meilen
+index.subtitle=Triff neue, aufregende Menschen!
 admin.remove-images=Bilder entfernen
-si=Internationales Einheitensystem
 admin.remove-description=Beschreibung entfernen
