Add missing translation

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -22,6 +22,8 @@ success.generic=Success!
 accent-color=Accent Color
 alerts=Alerts
 
+bmac=Buy me a coffee
+
 cancel=Cancel
 captcha=Captcha
 chats=Chats
