Fix messed up link in Dutch translation

--- a/src/main/resources/i18n/messages_nl.properties
+++ b/src/main/resources/i18n/messages_nl.properties
@@ -276,7 +276,7 @@ backend.webpush.match.message=Klik hier voor meer informatie
 backend.mail.register.body=Hallo {0}, Bedankt voor je registratie op {1}. Bevestig je registratie: <a href="{2}/register/confirm/{3}">{2}/register/confirm/{3}</a>
 backend.mail.password-reset.body=Hallo {0}, Je hebt een wachtwoordreset aangevraagd bij {1}. Ga naar de volgende link als je jouw wachtwoord opnieuw wilt instellen: <a href="3{2}/password/change/4{3}">5{2}/password/change/6{3}</a>
 backend.mail.account-delete-request.subject=Je account wordt verwijderd
-backend.mail.account-delete-request.body=Hallo {0}, <br> Je hebt gevraagd om je account te laten verwijderen op {1}. Ga naar de volgende link als u uw account permanent wilt verwijderen: <a href="3{2}/delete-account/4{3}">5{2}/delete-account/6{3}</a>. De link is 24 uur geldig.
+backend.mail.account-delete-request.body=Hallo {0}, <br> Je hebt gevraagd om je account te laten verwijderen op {1}. Ga naar de volgende link als u uw account permanent wilt verwijderen: <a href="{2}/delete-account/4{3}">{2}/delete-account/{3}</a>. De link is 24 uur geldig.
 backend.mail.account-confirmed.body=Hallo {0}, <br> We hebben het aanmaken van je account bevestigd op {1}. Veel plezier met het ontmoeten van nieuwe mensen!
 profile-onboarding.match.subtitle=Berichten kunnen alleen na een match worden verzonden
 interests=Belangstellingen
