Option to change Gender. Close #229

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -45,6 +45,7 @@ filter=Filter
 first-name=First name
 
 gender=Gender
+gender.change=Change Gender
 
 imperial=Imperial
 imprint=Imprint
@@ -115,8 +116,10 @@ profile.warning.no-intention=No intention found!
 profile.warning.no-gender-preference=No gender preference found!
 profile.warning.no-location=No location found! It will be set automatically when you search for other users!
 profile.warning.intention.limit=Intention changed. You cannot change it for another 24 hours.
+profile.warning.gender-change=Gender cooldown not finished.
 
-delete-account.title=Delete account
+
+delete-account.title=Delete account 
 delete-account.confirm=I hereby confirm to delete this account permanently.
 delete-account.not-active=Link is not active yet. Please check the instructions we have sent you or send another account deletion request.
 
